# app-score-predictor

./: .gitignore  main.py  pre-process-google-play-reviews-dataset.ipynb  pyproject.toml
