[project]
name = "app-score-predictor"
version = "0.1.0"
description = "Predicts the score of an app on Google Play Store."
authors = [
    {name = "tim@mbp",email = "timforrer16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
