[project]
name = "app-score-predictor"
version = "0.1.0"
description = "Predicts Google Play Store app scores."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
]
rocm = [
  "torch>=2.7.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "rocm" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-rocm", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
