[project]
name = "app-score-predictor"
version = "0.1.0"
description = "Predicts Google Play Store app scores."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.7.0",
  "pytorch-triton-rocm>=3.3.0 ; sys_platform == 'linux'",
  "pathlib>=1.0.1",
  "sentence-transformers>=4.1.0",
  "pandas>=2.3.0",
  "jupyterlab>=4.4.3",
  "protobuf>=6.31.1",
  "sentencepiece>=0.2.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
